# mega_backdoor_acp

./: .gitignore  CLAUDE.md  DASHBOARD_README.md  README.md  acp_calculator.py  acp_risk_zones_heatmap.csv  census_2024_exclusion_example.csv  census_example.csv  cli.py  constants.py  contribution_limits.py  employee_level_analysis.py  employee_level_hce_100pct_adoption_6pct_contrib.csv  employee_level_hce_25pct_adoption_8pct_contrib.csv  employee_level_hce_50pct_adoption_8pct_contrib.csv  enhancements.py  mega.bat  mega.ps1  plan_constants.yaml  pyproject.toml  requirements.txt  run_analysis.py  run_dashboard.sh  sample_census.csv  streamlit_dashboard.py  test_acp_validation.py  test_census_exclusions.csv
.claude/: settings.local.json
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/app/: __init__.py
docs/: ACP-Enterprise-PRD-v1.0.md  ACP-MVP-PRD.md
docs/epics/: epic-2-core-acp-calculation-engine.md  epic-6-enhancements.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
legacy/: CLAUDE.md  acp_calculator.py  constants.py  employee_level_hce_25pct_adoption_8pct_contrib.csv  employee_level_hce_50pct_adoption_8pct_contrib.csv  employee_level_nhce_100pct_adoption_6pct_contrib.csv  plan_constants.yaml  test_config_page.py  test_dashboard.py
legacy/docs/: PRD-Refactor.md
specs/001-acp-sensitivity-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-census-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-csv-import-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-scenario-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-heatmap-exploration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-employee-level-impact/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ui-style-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-react-frontend-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-csv-upload-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-acp-limits-visibility/: plan.md  spec.md  tasks.md
specs/011-fix-acp-exclusion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-duckdb-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/api/: dependencies.py  (+2 more)
ui-example/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package.json  types.ts
(+218 files in other folders)
